// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canonical ukrainian/ukraine_in_russian IDX page A11y I can see the skip to content link 1`] = `"Перейти к содержанию"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Analytics ATI 1`] = `"<img height=\\"1px\\" width=\\"1px\\" alt=\\"\\" style=\\"position:absolute\\" src=\\"https://logws1363.ati-host.net?s=598343&amp;s2=94&amp;p=ukrainian.ukraine_in_russian.page&amp;x1=[urn%3Abbc%3Acps%3A40c7c53a-ba2e-8679-e050-380a4e807947]&amp;x2=[responsive]&amp;x3=[news-ukrainian]&amp;x4=[ru]&amp;x7=[index-section]&amp;x8=[simorgh-nojs]&amp;x9=[%D0%A0%D0%A3%D0%A1%2B-%2BBBC%2BNews%2B%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0]&amp;x11=[2016-11-22T07%3A16%3A56.000Z]&amp;x12=[2020-05-19T14%3A28%3A22.000Z]\\"/>"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Footer Anchors should match text and url 1`] = `
Object {
  "text": "BBC News, Україна",
  "url": "/ukrainian",
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Footer Anchors should match text and url 2`] = `
Object {
  "text": "Чому BBC заслуговує на довіру",
  "url": "https://www.bbc.com/ukrainian/institutional-50170368",
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Footer Anchors should match text and url 3`] = `
Object {
  "text": "Правила користування",
  "url": "https://www.bbc.com/ukrainian/institutional-38144387",
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Footer Anchors should match text and url 4`] = `
Object {
  "text": "Особисті дані",
  "url": "https://www.bbc.com/ukrainian/institutional-38144827",
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Footer Anchors should match text and url 5`] = `
Object {
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Footer Anchors should match text and url 6`] = `
Object {
  "text": "Напишіть на ВВС",
  "url": "https://www.bbc.co.uk/ukrainian/send/u50853885",
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Footer Anchors should match text and url 7`] = `
Object {
  "text": "AdChoices / Do Not Sell My Info",
  "url": "https://www.bbc.com/usingthebbc/cookies/how-does-the-bbc-use-cookies-for-advertising/",
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Footer Anchors should match text and url 8`] = `
Object {
  "text": "Ознайомтеся з нашими правилами зовнішніх посилань.",
  "url": "https://www.bbc.co.uk/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/ukrainian"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Footer I can see the footer copyright and external linking text 1`] = `"© 2022 BBC. BBC не несе відповідальності за контент інших сайтів. Ознайомтеся з нашими правилами зовнішніх посилань."`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Footer lang code should match text 1`] = `"uk"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Header I can see the branding 1`] = `"BBC News, Україна"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Header Navigation link should match text and url 1`] = `
Object {
  "text": "Головна",
  "url": "/ukrainian",
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Header Navigation link should match text and url 2`] = `
Object {
  "text": "Війна з Росією",
  "url": "/ukrainian/topics/czp6w66edqpt",
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Header Navigation link should match text and url 3`] = `
Object {
  "text": "Історії",
  "url": "/ukrainian/53725237",
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Header Navigation link should match text and url 4`] = `
Object {
  "text": "Відео",
  "url": "/ukrainian/55425840",
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Header Navigation link should match text and url 5`] = `
Object {
  "text": "Книга року BBC",
  "url": "/ukrainian/features-50320117",
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Header Navigation link should match text and url 6`] = `
Object {
  "text": "Подкасти",
  "url": "/ukrainian/podcasts/p09jsy3h",
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Header lang code should match text 1`] = `"uk"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Main heading should match text 1`] = `"РУС"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO Apple Touch Icon should match attributes 1`] = `
Object {
  "sizes": null,
  "url": "http://localhost:7080/ukrainian/images/icons/icon-192x192.png",
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO Apple Touch Icon should match attributes 2`] = `
Object {
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-72x72.png",
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO Apple Touch Icon should match attributes 3`] = `
Object {
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-96x96.png",
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO Apple Touch Icon should match attributes 4`] = `
Object {
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-128x128.png",
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO Apple Touch Icon should match attributes 5`] = `
Object {
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-144x144.png",
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO Apple Touch Icon should match attributes 6`] = `
Object {
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-152x152.png",
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO Apple Touch Icon should match attributes 7`] = `
Object {
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-180x180.png",
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO Apple Touch Icon should match attributes 8`] = `
Object {
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-192x192.png",
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO Apple Touch Icon should match attributes 9`] = `
Object {
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-384x384.png",
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO Apple Touch Icon should match attributes 10`] = `
Object {
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-512x512.png",
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO Canonical link 1`] = `"http://localhost:7080/ukrainian/ukraine_in_russian"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO FB admins 1`] = `"100004154058350"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO Heading level 1 1`] = `"РУС"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO Lang attribute 1`] = `"ru-UA"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO Linked data should match text 1`] = `
Object {
  "@context": "http://schema.org",
  "@graph": Array [
    Object {
      "@type": "WebPage",
      "image": Object {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/ukrainian.png",
        "width": 1024,
      },
      "inLanguage": Object {
        "@type": "Language",
        "alternateName": "ru-UA",
        "name": "Russian",
      },
      "mainEntityOfPage": Object {
        "@id": "http://localhost:7080/ukrainian/ukraine_in_russian",
        "@type": "WebPage",
        "name": "РУС",
      },
      "publisher": Object {
        "@type": "NewsMediaOrganization",
        "logo": Object {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/ukrainian.png",
          "width": 1024,
        },
        "name": "BBC News Україна",
        "publishingPrinciples": "https://www.bbc.com/ukrainian/institutional-50170368",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/ukrainian.png",
      "url": "http://localhost:7080/ukrainian/ukraine_in_russian",
    },
  ],
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO OG description 1`] = `"Новости BBC News Україна на русском"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/ukrainian.png"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO OG image alt 1`] = `"BBC News Україна"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO OG locale 1`] = `"ru_UA"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO OG site name 1`] = `"BBC News Україна"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO OG title 1`] = `"РУС - BBC News Україна"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO OG type 1`] = `"website"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO OG url 1`] = `"http://localhost:7080/ukrainian/ukraine_in_russian"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO Page title 1`] = `"РУС - BBC News Україна"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO Twitter creator 1`] = `"@BBC_ua"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO Twitter description 1`] = `"Новости BBC News Україна на русском"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO Twitter image alt 1`] = `"BBC News Україна"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/ukrainian.png"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO Twitter site 1`] = `"@BBC_ua"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO Twitter title 1`] = `"РУС - BBC News Україна"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Sections should match headline text 1`] = `"BBC ЖурналПосмотреть все"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Sections should match headline text 2`] = `"Статьи"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Sections should match headline text 3`] = `"Фото дняПосмотреть все"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Sections should match headline text 4`] = `"Подробно"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Story Promo Headline should match text 1`] = `"Как не спиться на карантине"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Story Promo Image should match image 1`] = `
<img
  alt="Чоловік з келихом"
  class="e3vrtyk0 bbc-rb7xa0 e1mo64ex0"
  height="549"
  src="https://ichef.bbci.co.uk/news/660/cpsprodpb/DE34/production/_111648865_1stimage.png"
  width="976"
/>
`;
